# mefedroniy-client

./: Cargo.toml  README.md  servers.json
.github/ISSUE_TEMPLATE/: bug_report.md  🌟-client-suggestion.md  🐛-bug-report.md
docs/: colored_usernames.md  colored_usernames.ru.md
lang/: README.ru.md
src/: app.rs  client.rs  config.rs  formatter.rs  input.rs  lib.rs  main.rs  ui.rs
src/app/: message.rs  mod.rs  state.rs
src/app_cli/: app_loop.rs  mod.rs
src/app_cli/setup/: config.rs  mod.rs  network.rs  terminal.rs
src/client/: receiver.rs  sender.rs
src/config/: data.rs  file.rs  io.rs  mod.rs  model.rs  operations.rs
src/formatter/: mod.rs  parser.rs  regex.rs  sanitizer.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  processor.rs
src/rac_proto/: receiver.rs
src/ui/: chat.rs  input.rs  mod.rs
src/updater/: github.rs  mod.rs
src/utils/: input.rs  mod.rs  network.rs
