[package]
name = "mefedroniy-client"
description = "TUI client for Real Address Chat protocol."
authors = ["OctoBanon (Maksim Bengraf) <me@octobanon.com>"]
readme = "README.md"
repository = "https://github.com/OctoBanon-Main/mefedroniy-client"
license = "MIT"
version = "1.0.1+1.99.2"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
crossterm = "0.27.0"
regex = "1.10.2"
ratatui = "0.29.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.1"
unicode-width = "0.2.0"
