[package]
name = "mefedroniy-client"
description = "TUI client for Real Address Chat protocol."
authors = ["Maksim Bengraf (OctoBanon) <me@octobanon.com>"]
readme = "README.md"
repository = "https://github.com/OctoBanon-Main/mefedroniy-client"
license = "MIT"
version = "1.2.0+1.99.2"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
crossterm = "0.29.0"
regex = "1.10.2"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.1"
unicode-width = "0.2.0"
anyhow = "1.0.98"
once_cell = "1.21.3"

[lib]
name = "mefedroniy_client"
path = "src/lib.rs"

[[bin]]
name = "mefedroniy-client"
path = "src/bin/main.rs"